# HybridSNARK

./: Cargo.toml  README.md
benches/: hybridplonk_bench.rs  hybridspartan_bench.rs  hyperplonk_bench.rs  improved_sumcheck_bench.rs  vanilla_sumcheck_bench.rs
src/: degree_check.rs  generic_improved_sumcheck.rs  hybridplonk.rs  hybridplonk_old.rs  hybridspartan.rs  hyperplonk.rs  improved_sumcheck.rs  lib.rs  main.rs  samaritan_mlpcs.rs  util.rs  vanilla_sumcheck.rs
