[package]
name = "SuperPlonk"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-std = {version = "0.5.0", features = ["print-trace"]}
ark-poly = "0.5.0"
ark-ec = "0.5.0"
ark-poly-commit = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
merlin = "3.0.0"
ark-serialize = "0.5.0"
criterion = "0.5.0"

[[bench]]
name = "hyperplonk_bench"
harness = false

[[bench]]
name = "hybridplonk_bench"
harness = false

[[bench]]
name = "vanilla_sumcheck_bench"
harness = false

[[bench]]
name = "improved_sumcheck_bench"
harness = false